--- a/History of Marvel Movies/Content/Site.css
+++ b/History of Marvel Movies/Content/Site.css
@@ -1,6 +1,8 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-image: url(IMG/Font-Marvel-Logo.jpg);
+    background-position: center;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -21,4 +23,15 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.red {
+    color: red;
+}
+
+.form-area {
+    background-color: #C0C0C0;
+    padding: 10px 40px 60px;
+    margin: 30px 0px 20px;
+    border: 1px solid GREY;
 }
